@@ -389,8 +389,7 @@ doc_toc += '          <li><a href="admin_menu.htm#export" class="en">Export</a><
 doc_toc += '          <li><a href="admin_menu.htm#phpinfo" class="en">phpinfo</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#show_news" class="en">Show news</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#documentation" class="en">Documentation</a></li>\n';
-doc_toc += '          <li><a href="admin_menu.htm#" class="en">Admin mode for regular users</a></li>\n';
-doc_toc += '          <li><a href="admin_menu.htm#admin_mode_regular_users" class="en"></a></li>\n';
+doc_toc += '          <li><a href="admin_menu.htm#admin_mode_regular_users" class="en">Admin mode for regular users</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#user_menu_items" class="en">Admin menu items for regular users</a></li>\n';
 doc_toc += '        </ul>\n';
 doc_toc += '      </li>\n';
@@ -698,8 +697,7 @@ doc_toc += '    <ul>\n';
 doc_toc += '      <li><a href="uploading_batch-add.htm#batch_add_pics" class="en">Hochladen per FTP/Stapel-Hinzufügen</a>\n';
 doc_toc += '        <ul>\n';
 doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_pics_what" class="en">What batch-add does</a></li>\n';
-doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_pics_how" class="en"></a></li>\n';
-doc_toc += '          <li><a href="uploading_batch-add.htm#" class="en">How batch-add works</a></li>\n';
+doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_pics_how" class="en">How batch-add works</a></li>\n';
 doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_common_mistakes" class="en">Common mistakes</a>\n';
 doc_toc += '            <ul>\n';
 doc_toc += '              <li><a href="uploading_batch-add.htm#batch_add_common_mistakes_doesnt_work" class="en">Batch-add does not work as expected</a></li>\n';
