@@ -465,8 +465,7 @@ doc_toc += '          <li><a href="admin_menu.htm#export">Export</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#phpinfo">phpinfo</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#show_news">Show news</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#documentation">Documentation</a></li>\n';
-doc_toc += '          <li><a href="admin_menu.htm#">Admin mode for regular users</a></li>\n';
-doc_toc += '          <li><a href="admin_menu.htm#admin_mode_regular_users"></a></li>\n';
+doc_toc += '          <li><a href="admin_menu.htm#admin_mode_regular_users">Admin mode for regular users</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#user_menu_items">Admin menu items for regular users</a></li>\n';
 doc_toc += '        </ul>\n';
 doc_toc += '      </li>\n';
@@ -775,8 +774,7 @@ doc_toc += '    <ul>\n';
 doc_toc += '      <li><a href="uploading_batch-add.htm#batch_add_pics">Uploading pics by FTP / Batch-Add Pictures</a>\n';
 doc_toc += '        <ul>\n';
 doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_pics_what">What batch-add does</a></li>\n';
-doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_pics_how"></a></li>\n';
-doc_toc += '          <li><a href="uploading_batch-add.htm#">How batch-add works</a></li>\n';
+doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_pics_how">How batch-add works</a></li>\n';
 doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_common_mistakes">Common mistakes</a>\n';
 doc_toc += '            <ul>\n';
 doc_toc += '              <li><a href="uploading_batch-add.htm#batch_add_common_mistakes_doesnt_work">Batch-add does not work as expected</a></li>\n';
