@@ -438,8 +438,7 @@ doc_toc += '          <li><a href="admin_menu.htm#export" >Export</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#phpinfo">phpinfo</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#show_news">Montrer les news</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#documentation">Documentation</a></li>\n';
-doc_toc += '          <li><a href="admin_menu.htm#">Mode administrateur pour les utilisateurs normaux</a></li>\n';
-doc_toc += '          <li><a href="admin_menu.htm#admin_mode_regular_users" </a></li>\n';
+doc_toc += '          <li><a href="admin_menu.htm#admin_mode_regular_users">Mode administrateur pour les utilisateurs normaux</a></li>\n';
 doc_toc += '          <li><a href="admin_menu.htm#user_menu_items">Eléments de menu administrateur pour les utilisateurs normaux</a></li>\n';
 doc_toc += '        </ul>\n';
 doc_toc += '      </li>\n';
@@ -747,8 +746,7 @@ doc_toc += '    <ul>\n';
 doc_toc += '      <li><a href="uploading_batch-add.htm#batch_add_pics">Téléchargement des images par FTP / Ajout les images par lot</a>\n';
 doc_toc += '        <ul>\n';
 doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_pics_what">Ce que fait le téléchargement par lot</a></li>\n';
-doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_pics_how"></a></li>\n';
-doc_toc += '          <li><a href="uploading_batch-add.htm#">Comment fonctionne le téléchargement par lot</a></li>\n';
+doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_pics_how">Comment fonctionne le téléchargement par lot</a></li>\n';
 doc_toc += '          <li><a href="uploading_batch-add.htm#batch_add_common_mistakes">Erreurs communes</a>\n';
 doc_toc += '            <ul>\n';
 doc_toc += '              <li><a href="uploading_batch-add.htm#batch_add_common_mistakes_doesnt_work">L\'ajout par lot ne fonctionne pas comme prévu</a></li>\n';
